- fixing sizing of facebook widget - less covers in popular, only one collection

--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -669,6 +669,10 @@ body .loud {
   margin-left: 20px;
 }
 /* line 265, ../../../app/stylesheets/partials/_layout.sass */
+#right-column iframe.fb_ltr {
+  margin-bottom: 10px;
+}
+/* line 268, ../../../app/stylesheets/partials/_layout.sass */
 #right-column h4 {
   font-size: 18px;
   font-weight: bold;
@@ -676,7 +680,7 @@ body .loud {
   margin-bottom: 0;
   padding: 0;
 }
-/* line 272, ../../../app/stylesheets/partials/_layout.sass */
+/* line 275, ../../../app/stylesheets/partials/_layout.sass */
 #right-column .row {
   Width: 100%;
   text-align: left;
@@ -685,20 +689,20 @@ body .loud {
   font-size: 14px;
   font-family: Helvetica;
 }
-/* line 279, ../../../app/stylesheets/partials/_layout.sass */
+/* line 282, ../../../app/stylesheets/partials/_layout.sass */
 #right-column .row:hover {
   cursor: pointer;
 }
-/* line 281, ../../../app/stylesheets/partials/_layout.sass */
+/* line 284, ../../../app/stylesheets/partials/_layout.sass */
 #right-column .row img {
   margin-bottom: 0px;
 }
-/* line 283, ../../../app/stylesheets/partials/_layout.sass */
+/* line 286, ../../../app/stylesheets/partials/_layout.sass */
 #right-column .row span.kind {
   font-size: 10px;
   color: #999999;
 }
-/* line 287, ../../../app/stylesheets/partials/_layout.sass */
+/* line 290, ../../../app/stylesheets/partials/_layout.sass */
 #right-column .row .links a {
   margin-bottom: 6px;
   color: #333333;
@@ -706,12 +710,12 @@ body .loud {
   text-decoration: none;
   float: left;
 }
-/* line 293, ../../../app/stylesheets/partials/_layout.sass */
+/* line 296, ../../../app/stylesheets/partials/_layout.sass */
 #right-column .row .links a:hover {
   background: #ffff66;
   cursor: pointer;
 }
-/* line 296, ../../../app/stylesheets/partials/_layout.sass */
+/* line 299, ../../../app/stylesheets/partials/_layout.sass */
 #right-column p.popular {
   font-size: 16px;
   font-weight: bold;
@@ -720,7 +724,7 @@ body .loud {
   padding-bottom: 10px;
 }
 
-/* line 304, ../../../app/stylesheets/partials/_layout.sass */
+/* line 307, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar {
   width: 100%;
   height: 90px;
@@ -729,14 +733,14 @@ body .loud {
   bottom: 0;
   text-align: center;
 }
-/* line 311, ../../../app/stylesheets/partials/_layout.sass */
+/* line 314, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar .content {
   margin: 0 auto;
   width: 960px;
   text-align: left;
   padding-top: 15px;
 }
-/* line 317, ../../../app/stylesheets/partials/_layout.sass */
+/* line 320, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar .content .left {
   display: inline;
   float: left;
@@ -748,14 +752,14 @@ body .loud {
 * html #bottom-notification-bar .content .left {
   overflow-x: hidden;
 }
-/* line 320, ../../../app/stylesheets/partials/_layout.sass */
+/* line 323, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar .content .left span {
   width: 100%;
   display: block;
   color: white;
   font-size: 14px;
 }
-/* line 325, ../../../app/stylesheets/partials/_layout.sass */
+/* line 328, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar .content .center {
   display: inline;
   float: left;
@@ -767,7 +771,7 @@ body .loud {
 * html #bottom-notification-bar .content .center {
   overflow-x: hidden;
 }
-/* line 328, ../../../app/stylesheets/partials/_layout.sass */
+/* line 331, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar .content .center span {
   width: 100%;
   display: block;
@@ -776,7 +780,7 @@ body .loud {
   font-weight: bold;
   padding-top: 20px;
 }
-/* line 336, ../../../app/stylesheets/partials/_layout.sass */
+/* line 339, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar .content .right {
   display: inline;
   float: left;
@@ -788,12 +792,12 @@ body .loud {
 * html #bottom-notification-bar .content .right {
   overflow-x: hidden;
 }
-/* line 339, ../../../app/stylesheets/partials/_layout.sass */
+/* line 342, ../../../app/stylesheets/partials/_layout.sass */
 #bottom-notification-bar .content .right a {
   margin-top: 10px;
 }
 
-/* line 343, ../../../app/stylesheets/partials/_layout.sass */
+/* line 346, ../../../app/stylesheets/partials/_layout.sass */
 .like-send {
   display: inline;
   float: left;
